Table Learner {
    id BIGINT [primary key, unique, increment]
    Name NVARCHAR(255) [not null]
    Email NVARCHAR(255) [not null, unique]
    PasswordHash NVARCHAR(255) [not null]
    ProfilePicture NVARCHAR(MAX)
    Bio NVARCHAR(MAX)
    CreatedAt DATETIME [default: 'GETDATE()']
    UpdatedAt DATETIME [default: 'GETDATE()']
    LastLogin DATETIME
    DeletedAt DATETIME
    IsDeleted BIT [default: 0]
}

Table Category {
    id BIGINT [primary key, unique, increment]
    Title NVARCHAR(255) [not null]
    Color NVARCHAR(50) [not null]
    Description NVARCHAR(MAX)
    CreatedAt DATETIME [default: 'GETDATE()']
    UpdatedAt DATETIME [default: 'GETDATE()']
    ParentCategoryID BIGINT [ref: > Category.id]
    LearnerID BIGINT [not null, ref: > Learner.id]
    DeletedAt DATETIME
    IsDeleted BIT [default: 0]

}

Table Goal {
    id BIGINT [primary key, unique, increment]
    Title NVARCHAR(255) [not null]
    Description NVARCHAR(MAX) [not null]
    Motivation NVARCHAR(MAX) [not null]
    Term NVARCHAR(50) [not null, note: "CHECK (Term IN ('Long-Term', 'Medium-Term', 'Short-Term'))"]
    Status NVARCHAR(50) [not null, note: "CHECK (Status IN ('Not-Started', 'In-Progress', 'On-Hold', 'Done', 'Canceled'))"]
    CompletionDate DATE
    CreatedAt DATETIME [default: 'GETDATE()']
    UpdatedAt DATETIME [default: 'GETDATE()']
    CategoryID BIGINT [ref: > Category.id]
    LearnerID BIGINT [not null, ref: > Learner.id]
    DeletedAt DATETIME
    IsDeleted BIT [default: 0]

}

Table Subgoal {
    id BIGINT [primary key, unique, increment]
    Title NVARCHAR(255) [not null]
    Description NVARCHAR(MAX) [not null]
    Status NVARCHAR(50) [not null]
    CreatedAt DATETIME [default: 'GETDATE()']
    UpdatedAt DATETIME [default: 'GETDATE()']
    GoalID BIGINT [not null, ref: > Goal.id]
    DeletedAt DATETIME
    IsDeleted BIT [default: 0]
}

Table LearningResourceType {
    id BIGINT [primary key, unique, increment]
    Name NVARCHAR(255) [not null, unique]
    UnitType NVARCHAR(255) [not null, unique]
    LearnerID BIGINT [not null, ref: > Learner.id]
    DeletedAt DATETIME
    IsDeleted BIT [default: 0]
}

Table LearningResource {
    id BIGINT [primary key, unique, increment]
    Title NVARCHAR(255) [not null]
    TypeID BIGINT [not null, ref: > LearningResourceType.id]
    TotalUnits INT [not null, note: "CHECK (TotalUnits > 0)"]
    Progress INT [not null, note: "CHECK (Progress >= 0 AND Progress <= TotalUnits)"]
    Link NVARCHAR(MAX)
    CreatedAt DATETIME [default: 'GETDATE()']
    UpdatedAt DATETIME [default: 'GETDATE()']
    LearnerID BIGINT [not null, ref: > Learner.id]
    CategoryID BIGINT [ref: > Category.id]
    GoalID BIGINT [ref: > Goal.id]
    SubgoalID BIGINT [ref: > Subgoal.id]
    DeletedAt DATETIME
    IsDeleted BIT [default: 0]
}

Table KanbanStatus {
    id BIGINT [primary key, unique, increment]
    Name NVARCHAR(255) [not null, unique]
    MaxTasks INT [note: 'Maximum number of tasks allowed, must be positive']
    LearnerID BIGINT [not null, ref: > Learner.id]
    DeletedAt DATETIME
    IsDeleted BIT [default: 0]

}

Table TaskType {
    id BIGINT [primary key, unique, increment]
    Name NVARCHAR(255) [not null, unique]
    Description NVARCHAR(500)
    Icon VARBINARY(MAX)
    LearnerID BIGINT [not null, ref: > Learner.id]
    DeletedAt DATETIME
    IsDeleted BIT [default: 0]
}

Table Task {
    id BIGINT [primary key, unique, increment]
    Title NVARCHAR(255) [not null]
    TypeID BIGINT [not null, ref: > TaskType.id]
    KanbanStatusID BIGINT [not null, ref: > KanbanStatus.id]
    EisenhowerStatus NVARCHAR(50) [not null, note: "CHECK (EisenhowerStatus IN ('Urgent & Important', 'Not Urgent but Important', 'Urgent but Not Important', 'Not Urgent & Not Important'))"]
    TimeTaskRelated NVARCHAR(50) [not null, note: "CHECK (TimeTaskRelated IN ('Today', 'Tomorrow', 'This Week', 'Someday'))"]
    DueDate DATE
    EstimatedTime TIME
    TimeSpent TIME
    RepeatFrequency NVARCHAR(50) [not null, default: 'None', note: "CHECK (RepeatFrequency IN ('None', 'Daily', 'Weekly', 'Monthly', 'Annually', 'Custom'))"]
    RepeatInterval INT
    RepeatOnSunday BIT [default: 0]
    RepeatOnMonday BIT [default: 0]
    RepeatOnTuesday BIT [default: 0]
    RepeatOnWednesday BIT [default: 0]
    RepeatOnThursday BIT [default: 0]
    RepeatOnFriday BIT [default: 0]
    RepeatOnSaturday BIT [default: 0]
    RepeatEnds NVARCHAR(50) [note: "CHECK (RepeatEnds IN ('Never', 'On Date', 'After Occurrences'))"]
    RepeatEndDate DATE
    RepeatEndOccurrences INT
    CreatedAt DATETIME [default: 'GETDATE()']
    UpdatedAt DATETIME [default: 'GETDATE()']
    LearnerID BIGINT [not null, ref: > Learner.id]
    CategoryID BIGINT [ref: > Category.id]
    GoalID BIGINT [ref: > Goal.id]
    SubgoalID BIGINT [ref: > Subgoal.id]
    LearningResourceID BIGINT [ref: > LearningResource.id]
    DeletedAt DATETIME
    IsDeleted BIT [default: 0]
}

Table Subtask {
    id BIGINT [primary key, unique, increment]
    Title NVARCHAR(255) [not null]
    Status NVARCHAR(50) [not null, note: "CHECK (Status IN ('Not Started', 'In Progress', 'Completed'))"]
    CreatedAt DATETIME [default: 'GETDATE()']
    UpdatedAt DATETIME [default: 'GETDATE()']
    TaskID BIGINT [not null, ref: > Task.id]
    DeletedAt DATETIME
    IsDeleted BIT [default: 0]
}

Table Note {
    id BIGINT [primary key, unique, increment]
    Title NVARCHAR(255) [not null]
    Body NVARCHAR(MAX) [not null]
    CreatedAt DATETIME [default: 'GETDATE()']
    UpdatedAt DATETIME [default: 'GETDATE()']
    CategoryID BIGINT [ref: > Category.id]
    GoalID BIGINT [ref: > Goal.id]
    SubgoalID BIGINT [ref: > Subgoal.id]
    TaskID BIGINT [ref: > Task.id]
    LearnerID BIGINT [not null, ref: > Learner.id]
    DeletedAt DATETIME
    IsDeleted BIT [default: 0]
}